add maxlength to textareas

--- a/form.html
+++ b/form.html
@@ -17,6 +17,7 @@
           id="your-question"
           cols="50"
           rows="10"
+          maxlength="150"
         ></textarea>
         <label for="your-answer">Your answer</label>
         <textarea
@@ -24,6 +25,7 @@
           id="your-answer"
           cols="50"
           rows="10"
+          maxlength="150"
         ></textarea>
         <label for="your-tag">Your tag(s)</label>
         <input type="text" name="your-tag" />
