add span for characters left

--- a/form.html
+++ b/form.html
@@ -19,6 +19,9 @@
           rows="10"
           maxlength="150"
         ></textarea>
+        <p class="remaining-characters">
+          <span data-js="remaining-characters">150</span> characters left
+        </p>
         <label for="your-answer">Your answer</label>
         <textarea
           name="your-answer"
@@ -27,6 +30,9 @@
           rows="10"
           maxlength="150"
         ></textarea>
+        <p class="remaining-characters">
+          <span data-js="remaining-characters">150</span> characters left
+        </p>
         <label for="your-tag">Your tag(s)</label>
         <input type="text" name="your-tag" />
         <button type="submit" data-js="form-submit-button" class="submit-form">
