add left characters counter

--- a/form.html
+++ b/form.html
@@ -15,23 +15,26 @@
         <textarea
           name="your-question"
           id="your-question"
+          data-js="text-area-input-question"
           cols="50"
           rows="10"
           maxlength="150"
         ></textarea>
         <p class="remaining-characters">
-          <span data-js="remaining-characters">150</span> characters left
+          <span data-js="remaining-characters-question">150</span> characters
+          left
         </p>
         <label for="your-answer">Your answer</label>
         <textarea
           name="your-answer"
           id="your-answer"
+          data-js="text-area-input-answer"
           cols="50"
           rows="10"
           maxlength="150"
         ></textarea>
         <p class="remaining-characters">
-          <span data-js="remaining-characters">150</span> characters left
+          <span data-js="remaining-characters-answer">150</span> characters left
         </p>
         <label for="your-tag">Your tag(s)</label>
         <input type="text" name="your-tag" />
