finish new darkmode toggle

--- a/profile.html
+++ b/profile.html
@@ -51,13 +51,12 @@
         <h2 class="about-me-heading">Settings</h2>
         <div class="settings--dark-mode">
           <h3 class="settings--dark-mode-heading">Dark Mode</h3>
-
-          <!-- <label class="switch">
-            <input type="checkbox" data-js="toggle" />
-            <span class="slider"></span>
-          </label> -->
           <div class="dm-btn-container">
-            <button type="button" class="dm-btn" data-js="dm-btn"></button>
+            <button
+              type="button"
+              class="dm-btn btn-position position--0"
+              data-js="dm-btn"
+            ></button>
           </div>
         </div>
       </section>
