add new profile photo

--- a/profile.html
+++ b/profile.html
@@ -11,7 +11,7 @@
     <main class="profile-main">
       <section class="intro-section">
         <img
-          src="./resources/profile.png"
+          src="./resources/profile-photo.JPG"
           alt="icon of person"
           class="profile-pic"
         />
