--- a/form.html
+++ b/form.html
@@ -36,7 +36,7 @@
         <p class="remaining-characters">
           <span data-js="remaining-characters-answer">150</span> characters left
         </p>
-        <label for="your-tag">Your tag(s)</label>
+        <label for="your-tag">Your tag</label>
         <input type="text" name="your-tag" />
         <button type="submit" data-js="form-submit-button" class="submit-form">
           Submit
