--- a/bookmarks.html
+++ b/bookmarks.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/style.css" />
-    <title>Bookmarks | Vietname - Quiz</title>
+    <title>Bookmarks | Vietnam - Quiz</title>
   </head>
   <body>
     <header class="header"><h1>Bookmarks | Vietnam-Quiz</h1></header>
